# english-or-not

./: .cursorrules  .gitignore  Cargo.toml  ENHANCED_DETECTION.md  README.md  benchmark.md  bert.md  generate_dictionary.sh  generate_sentences.py  gibberish_sentences.txt  huggingface-integration-plan.md
.cargo/: config.toml
.github/workflows/: ci.yml
benches/: gibberish_detection.rs
src/: cli.rs  dictionary.rs  lib.rs  model.rs  passwords.rs
wordlists/dictionaries/: Dict.txt  engmix.txt  soource
