[package]
name = "gibberish-or-not"
version = "0.4.0"
edition = "2021"
license='MIT'
description='Figure out if text is gibberish or not'

[dependencies]
phf = { version = "0.11", features = ["macros"] }
once_cell = "1.19"
unicode-segmentation = "1.10"
lazy_static = "1.4.0"

[[bin]]
name = "dictionary"
path = "src/bin/dictionary.rs"
