[package]
name = "gibberish-or-not"
version = "5.0.1"
edition = "2021"
license='MIT'
description='Figure out if text is gibberish or not'

[profile.dev]
opt-level = 1  # Basic optimizations for faster compile & test cycles
split-debuginfo = "unpacked"  # Better for Linux performance

[profile.release]
opt-level = 3
lto = "thin"  # ThinLTO for faster release builds
codegen-units = 1  # Better optimizations but still reasonable build time

[profile.test]
opt-level = 1  # Faster test compilation
inherits = "dev"

[dependencies]
phf = { version = "0.11", features = ["macros"] }
once_cell = "1.19"
unicode-segmentation = "1.10"
lazy_static = "1.4.0"
encoding_rs = "0.8.33"
log = "0.4"
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
thiserror = "1.0"
chrono = "0.4"
env_logger = "0.10"
# Candle dependencies
candle-core = "0.3.1"
candle-nn = "0.3.1"
candle-transformers = "0.3.1"
tokenizers = "0.14.1"
safetensors = "0.3.1"

[dev-dependencies]
criterion = "0.5"

[[bin]]
name = "dictionary"
path = "src/bin/dictionary.rs"

[[bin]]
name = "is_gibberish"
path = "src/bin/is_gibberish.rs"

[[bin]]
name = "passwords"
path = "src/bin/passwords.rs"

[[bin]]
name = "download_model"
path = "src/bin/download_model.rs"

[[bin]]
name = "enhanced_detection"
path = "src/bin/enhanced_detection.rs"

[[bin]]
name = "test_sensitivity"
path = "src/bin/test_sensitivity.rs"

[[bench]]
name = "gibberish_detection"
harness = false
